# nginx_configurator

./: .gitignore  Makefile  README.md  example.yaml  pyproject.toml
nginx_configurator/: __main__.py  cli.py  config_types.py  render.py
templates/: redirect.vhost.jinja2  reverse_proxy.vhost.jinja2
